samples/_failures_safe/1761095654_fb2b40_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3799c663.c: In function ‘main’:
./samples/SAFE/__tmp_3799c663.c:170:5: error: expected expression at end of input
  170 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_3799c663.c:170:5: error: expected declaration or statement at end of input
